style.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0px;
}

.container {
    display: flex;
    width: 1350px;
    flex: 0 1 auto;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB; 
}

button {
    background-color: #3882f6;
    color: white;
    border: none;
    border-radius: 6px;
    padding: 5px;
    font-size: 15px;
}

/* This is the header section of the webpage */

.header {
    display: flex;;
    justify-content: center;
    background: #1F2937;
    padding-bottom: 75px;
}

.header-div {
    display: flex;
    flex-wrap: wrap;
    gap: 100px;
    padding: 35px;
}

.navigation-bar {
    display: flex;
    width: 1350px;
    flex: 0 1 auto;
    justify-content: space-between;
}

.header-links {
    display: flex;
    gap: 15px;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
}

.header-modal {
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    height: 200px;
    gap: 15px;
}

.header-info {
    display: flex;
    justify-content: space-between;
    width: 1350px;
    flex: 0 1 auto;
}

.top-row {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.header-modal-text {
    font-size: 18px;
    color: #E5E7EB;
}

.header-img {
    color: white;
    background: grey;
    border: solid 2px grey;
    display: flex;
    flex: 0 1 auto;
    justify-content: center;
    align-items: center;
    width: 700px;
    height: 300px;
}

/* This is the page-info section of the webpage */

.page-info {
    display: flex;
    justify-content: center;
    padding-bottom: 75px;
}

.page-info-div {
    display: flex;
    padding: 35px;
    flex-wrap: wrap;
} 

.page-info-title {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    display: flex;
    flex-basis: 100%;
    justify-content: center;
}

.page-info-graphics {
    display: flex;
    gap: 25px;
    margin-left: 50px;
    margin-right: 50px;
}

.page-info-graphics-box {
    border: solid blue 2px;
    border-radius: 5px;
    height: 250px;
    margin-bottom: 20px;
    margin-top: 20px;
}

.page-info-graphics-text {
    text-align: center;
}

/* This is the testimonial section of the webpage */

.testimonial {
    display: flex;
    justify-content: center;
    background: #E5E7EB;
    padding: 100px;
    flex-basis: 100%;
    flex-wrap: wrap;
}

.testimonial-div {
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
}

.testimonial-quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
}

.testimonial-source {
    font-weight: 700;
    display: flex;
    flex-basis: 100%;
    justify-content: flex-end;
}

/* This is the page sign-up section of the webpage */

.page-sign-up {
    display: flex;
    justify-content: center;
    padding: 100px;
}

.page-sign-up-div {
    display: flex;
    justify-content: space-between;
    padding: 50px;
    background: #3882f6;
    border: solid #3882f6 1px;
    border-radius: 8px;
}

.page-sign-up-title {
    color: white;
    font-size: 24px;
    font-weight: 600;
}

.page-sign-up-text {
    color: white;
    font-size: 18px;
}


.page-sign-up-words {
    margin-left: 200px;
}

.page-sign-up-button {
    border: solid white 1.5px;
    margin-right: 200px;
}

/* This is the footer of the webpage */

.footer {
    display: flex;
    flex: 0 0 auto;
    justify-content: center;
    align-items: center;
    height: 50px;
    background: #1F2937;
    color: #E5E7EB
}

